--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
     <script type="text/javascript" src="javascript/map.js" defer></script>
     <script
       type="text/javascript"
-      src="http://www.bing.com/api/maps/mapcontrol?callback=GetMap&key=AkJDA1xVwkFLl0WSwwgsjPTHEtM5fVjAsPt4BAId9CW4muifi32m9g4VNCCWFUXh"
+      src="https://www.bing.com/api/maps/mapcontrol?callback=GetMap&key=AkJDA1xVwkFLl0WSwwgsjPTHEtM5fVjAsPt4BAId9CW4muifi32m9g4VNCCWFUXh"
       async
       defer
     ></script>
